--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,45 +2,48 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "com.nsw.baseballnsw"
         minSdkVersion 17
         targetSdkVersion 26
-        versionCode 9
-        versionName "1.9"
+        versionCode 2
+        versionName "1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
     }
-
+    dexOptions {
+        javaMaxHeapSize "4g"
+    }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: '*.jar', dir: 'libs')
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support:support-v4:26.1.0'
-    compile 'com.squareup.retrofit:retrofit:1.9.0'
-    compile 'com.google.android.gms:play-services:10.0.1'
+    implementation 'com.squareup.retrofit:retrofit:1.9.0'
+    implementation 'com.google.android.gms:play-services:12.0.0'
     // was 8.3.0
-    compile 'info.hoang8f:android-segmented:1.0.6'
-    compile 'de.hdodenhof:circleimageview:2.0.0'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.nineoldandroids:library:2.4.0'
-    compile 'com.daimajia.slider:library:1.1.5@aar'
-    compile 'com.isseiaoki:simplecropview:1.0.13'
-    compile 'com.joanzapata.pdfview:android-pdfview:1.0.4@aar'
-    compile 'it.sephiroth.android.library.imagezoom:imagezoom:+'
-    compile 'com.android.support:multidex:1.0.1'
-
+    implementation 'info.hoang8f:android-segmented:1.0.6'
+    implementation 'de.hdodenhof:circleimageview:2.0.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.nineoldandroids:library:2.4.0'
+    implementation 'com.daimajia.slider:library:1.1.5@aar'
+    implementation 'com.isseiaoki:simplecropview:1.0.13'
+    implementation 'com.joanzapata.pdfview:android-pdfview:1.0.4@aar'
+    implementation 'it.sephiroth.android.library.imagezoom:imagezoom:+'
+    implementation 'com.android.support:multidex:1.0.1'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
